--- a/implementation/package.json
+++ b/implementation/package.json
@@ -3,15 +3,16 @@
   "version": "0.0.1",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "node ./app.js"
   },
   "dependencies": {
     "body-parser": "~1.17.1",
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.3",
     "express": "~4.15.2",
-    "mysql": "~2.5.4",
+    "express-session": "^1.15.6",
     "morgan": "~1.8.1",
-    "serve-favicon": "~2.4.2"
+    "mysql": "~2.5.4",
+    "serve-favicon": "^2.4.5"
   }
 }
