Implemented markdown rendering

--- a/react-frontend/package.json
+++ b/react-frontend/package.json
@@ -16,7 +16,8 @@
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "react": "^16.0.0",
-    "react-dom": "^16.0.0"
+    "react-dom": "^16.0.0",
+    "react-remarkable": "^1.1.3"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.6",
